src/test/rustdoc-ui/intra-doc/incompatible-primitive-disambiguator.stderr
error: incompatible link kind for `u8::MIN`
  --> $DIR/incompatible-primitive-disambiguator.rs:2:6
   |
LL | //! [static@u8::MIN]
   |      ^^^^^^^^^^^^^^ help: to link to the associated constant, prefix with `const@`: `const@u8::MIN`
   |
note: the lint level is defined here
  --> $DIR/incompatible-primitive-disambiguator.rs:1:9
   |
LL | #![deny(broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^
   = note: this link resolved to an associated constant, which is not a static

error: aborting due to previous error

