src/test/rustdoc-ui/intra-doc/incompatible-primitive-disambiguator.rs
#![deny(broken_intra_doc_links)]
//! [static@u8::MIN]
//~^ ERROR incompatible link kind
